# templates-base

./: pyproject.toml
.github/workflows/: python-package.yml
