[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    "ASYNC",
    # comprehensions
    "C4",
    # implicit string concat
    "ISC",
    # pytest
    "PT",
    # return
    "RET",
    # pathlib
    "PTH",
    # remove commented code
    "ERA",
    # pandas
    "PD",
    # use specific error code for lint ignores
    "PGH",
    # pylint
    "PL",
    # numpy
    "NPY",
    "PERF",
    "FURB",
]
ignore = [
    # Line too long
    "E501",
    # open should be replaced by Path.open
    "PTH123",
    "ISC001",
]

[tool.mypy]
strict = true
disallow_untyped_calls = false
allow_redefinition = true
no_implicit_reexport = false

[project]
name = "base-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AndBoyS", email = "andboyxd@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mypy>=1.14.1",
    "ruff>=0.9.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.9.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
