[project]
name = "base-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "AndBoyS", email = "andboyxd@gmail.com" }]
requires-python = ">=3.11"


[build-system]
requires = ["uv_build~=0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "src"
module-root = ""

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E",     # pycodestyle
  "F",     # Pyflakes
  "UP",    # pyupgrade
  "B",     # flake8-bugbear
  "SIM",   # flake8-simplify
  "I",     # isort
  "ASYNC",
  "C4",    # comprehensions
  "ISC",   # implicit string concat
  "PT",    # pytest
  "RET",   # return
  "PTH",   # pathlib
  "ERA",   # remove commented code
  "PD",    # pandas
  "PGH",   # use specific error code for lint ignores
  "PL",    # pylint
  "NPY",   # numpy
  "PERF",
  "FURB",
  "A005",
]
ignore = [
  "E501",   # Line too long
  "ISC001",
  "PLR091", # Uncle Bob's BS
  "PTH123", # open should be replaced by Path.open
]

[dependency-groups]
dev = ["ruff>=0.13.2", "ty>=0.0.13"]
